fix ipad responsiveness , give spacing bw inputs ,align cards

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav {
 
 ul.navlist {
     width: 25%;
-    margin: 0 30%;
+    margin: 0 28%;
 }
 
 p.logoText {
@@ -314,12 +314,12 @@ i.fa-brands:hover {
 
 .alias {
 
-    width: 100%;
+    width: 109%;
     margin-top: 1rem;
     text-transform: capitalize;
     display: flex;
     text-align: justify;
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     justify-content: center;
     word-spacing: 3rem;
 
@@ -458,7 +458,7 @@ i:hover {
 /* project Section  */
 .projectCont {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
 }
 
 .projectCard {
@@ -548,9 +548,9 @@ i:hover {
 }
 
 
-.contact {
+/* .contact {
     padding: 0.4rem 4rem;
-}
+} */
 
 .inputCont {
     width: 75%;
@@ -583,7 +583,7 @@ textarea#message {
 .yname,
 .yemail {
     height: 1.5rem;
-    width: 40%;
+    width: 44%;
     font-size: 1.1rem;
     border: none;
     outline: none;
@@ -680,60 +680,12 @@ footer {
         transition: 0.5s;
 
     }
-
-    .about {
-        flex-direction: column-reverse;
-        justify-content: start;
-        height: max-content;
-    }
-
-    .rightAbout {
-        width: 100%;
-        margin-top: 2rem;
-
-    }
-
-    .leftAbout {
-        padding: 0rem 0%;
-        width: 100%;
-        min-width: 100%;
-    }
-
-    p.nameText {
-        font-size: 3.8rem;
-        padding: 0rem 0rem;
-        text-align: center;
-    }
-
     p.emailText {
         font-size: 1.3rem;
         top: 6.6rem;
-        left: 6rem;
-    }
-
-    .midLeftAbout {
-        width: 100%;
-        margin-top: 2rem;
-        margin-bottom: 1rem;
-        text-align: justify;
-    }
-
-    .sdsinfo {
-        left: -19rem;
-        opacity: 0;
-    }
-
-    .section_s_p {
-        margin-top: 4rem;
-        padding: 0rem 1rem;
-    }
-
-    .botLeftAbout {
-        display: flex;
-        justify-content: space-around;
-        margin-top: 0rem;
-        height: max-content;
-    }
+        left: 33%;
+        }
+    
 
     .sectionHeading {
         border-top: 0.1rem solid white;
@@ -769,6 +721,8 @@ footer {
 
     .rightCard {
         width: 82%;
+        top: 6.2rem;
+        height: 17rem;
     }
 
     .projectCard {
@@ -777,8 +731,11 @@ footer {
     }
 
     .projectName {
-        font-size: 1.9rem;
-    }
+        font-size: 1.6rem;
+        }
+        .botLeftCard p{
+            font-size: 1.2rem;
+        }
 
     .contact {
         margin-top: 3rem;
@@ -812,5 +769,97 @@ footer {
     .alias {
         margin-bottom: 1rem;
 
+    }
+}
+@media only screen and (max-width:1000px){
+    .about {
+        flex-direction: column-reverse;
+        justify-content: start;
+        height: max-content;
+    }
+
+    .rightAbout {
+        width: 100%;
+        margin-top: 2rem;
+
+    }
+
+    .leftAbout {
+        padding: 0rem 0%;
+        width: 100%;
+        min-width: 100%;
+    }
+    .topleftAbout{
+        justify-content: center;
+    }
+    p.nameText {
+        font-size: 3.8rem;
+        padding: 0rem 0rem;
+        text-align: center;
+    }
+
+    
+
+    .midLeftAbout {
+        width: 100%;
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+        text-align: justify;
+    }
+
+    .sdsinfo {
+        left: -19rem;
+        opacity: 0;
+    }
+
+    .section_s_p {
+        margin-top: 4rem;
+        padding: 0rem 1rem;
+    }
+
+    .botLeftAbout {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 0rem;
+        height: max-content;
+    }
+}
+@media only screen and (min-width:601px) and (max-width:1000px){
+    nav{
+        padding-left: 2rem;
+
+    }
+    ul.navlist {
+        width: 56%;
+        margin: 0px 13%;
+    }
+    li.navitem{
+        margin-right: 7%;
+    }
+    p.emailText{
+        font-size: 1.3rem;
+
+        top: 3.6rem;
+        left: 40%;
+    }
+    .rightCard{
+        height: 15rem;
+        top: 5.5rem;
+    }
+    .projectName{
+        font-size: 1.6rem;
+    }
+    .rightSkills{
+        top: 24%;
+    left: 56%;
+    }
+    .yname,.yemail{
+        width: 41%;
+    }
+    .botLeftCard p{
+        font-size: 1.17rem;
+    }
+    form.contactForm {
+        width: 92%;
     }
 }
